--- a/public/project/partials/user/profile.html
+++ b/public/project/partials/user/profile.html
@@ -19,17 +19,19 @@
                                ng-model="ctrl.user.lastName" ng-change="ctrl.changes=true">
                     </md-input-container>
                 </div>
-                <h2 class="md-headline">Discord Info</h2>
-                <md-list>
-                    <md-list-item class="md-2-line arc-discord-profile">
-                        <img class="md-avatar"
-                             src="https://cdn.discordapp.com/avatars/{{currentUser.discord.id}}/{{currentUser.discord.avatar}}.jpg">
-                        <div class="md-list-item-text" layout="column">
-                            <h3>{{ctrl.user.discord.username}}</h3>
-                            <p>#{{ctrl.user.discord.discriminator}}</p>
-                        </div>
-                    </md-list-item>
-                </md-list>
+                <div ng-if="currentUser.discord">
+                    <h2 class="md-headline">Discord Info</h2>
+                    <md-list>
+                        <md-list-item class="md-2-line arc-discord-profile">
+                            <img class="md-avatar"
+                                 src="https://cdn.discordapp.com/avatars/{{currentUser.discord.id}}/{{currentUser.discord.avatar}}.jpg">
+                            <div class="md-list-item-text" layout="column">
+                                <h3>{{ctrl.user.discord.username}}</h3>
+                                <p>#{{ctrl.user.discord.discriminator}}</p>
+                            </div>
+                        </md-list-item>
+                    </md-list>
+                </div>
                 <br/>
                 <div layout="row">
                     <md-button flex="50" type="submit" class="md-accent md-raised">
@@ -47,16 +49,17 @@
             <div layout="row" layout-align="start center">
                 <h2 class="md-headline" layout-padding>Your Amazing Bots</h2>
                 <span flex></span>
-                <md-button ng-click="ctrl.newBot()" class="md-raised md-primary" style="height:0">Make a New One
+                <md-button ng-click="ctrl.newBot()" class="md-raised md-primary" style="height:0">
+                    Make a New One
                 </md-button>
             </div>
             <md-content hide show-gt-sm layout="row" flex="100">
                 <div flex="50">
-                    <arc-bot-card  ng-repeat="bot in ctrl.botsLeft" bot="bot"
+                    <arc-bot-card ng-repeat="bot in ctrl.botsLeft" bot="bot"
                                   elevated="true"></arc-bot-card>
                 </div>
                 <div flex="50">
-                    <arc-bot-card  ng-repeat="bot in ctrl.botsRight" bot="bot"
+                    <arc-bot-card ng-repeat="bot in ctrl.botsRight" bot="bot"
                                   elevated="true"></arc-bot-card>
                 </div>
             </md-content>
