Some quick comment fixes...

--- a/public/project/partials/user/view.html
+++ b/public/project/partials/user/view.html
@@ -52,7 +52,7 @@
             </div>
             <md-content layout="column">
                 <arc-comment ng-repeat="comment in ctrl.comments" comment="comment"
-                             block="ctrl.bot.comments" ng-if="comment"></arc-comment>
+                             block="ctrl.user.comments" ng-if="comment"></arc-comment>
             </md-content>
         </section>
     </div>
